Correction bug pagination Tablette

--- a/src/index.scss
+++ b/src/index.scss
@@ -633,7 +633,7 @@ body {
   margin: auto;
   gap: 5px;
   margin-top: 10px !important;
-  @media (max-width: 1000px) {
+  @media (max-width: 1160px) {
     gap: 0.1px;
     flex-wrap: wrap;
   }
@@ -647,7 +647,7 @@ body {
     margin-top: 10px;
     margin: 0 0.5rem;
     list-style: none;
-    @media (max-width: 1000px) {
+    @media (max-width: 1160px) {
       margin: 0.1rem 0.1rem;
     }
     
